force-app/main/default/objects/redwing__Training_Plan_Assignment__c/redwing__Training_Plan_Assignment__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Assignment</label>
    <nameField>
        <displayFormat>LPAS-{0000000}</displayFormat>
        <label>Learning Plan Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>