force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Due_Date__c</fullName>
    <inlineHelpText>Due Date for assignments to be completed</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>