force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__Duration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration__c</fullName>
    <inlineHelpText>Duration (in minutes) of required learning content in the Learning Plan Assignment.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>