force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__eSignature_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__eSignature_Verification_Status__c</fullName>
    <inlineHelpText>Verification Status for Learning Plan Completion.</inlineHelpText>
    <label>eSignature Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>