force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>redwing__Last_Updated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>