force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__Total_NotStarted_Items__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_NotStarted_Items__c</fullName>
    <label>Total Not Started Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>