force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Plan Assignments</relationshipLabel>
    <relationshipName>Training_Plan_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>