force-app/main/default/objects/redwing__Training_Plan_Assignment__c/fields/redwing__User__c.field-meta.xml
<CustomField>
    <fullName>redwing__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Plan_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>